--- a/tag_tags-are-optional.html
+++ b/tag_tags-are-optional.html
@@ -10,7 +10,7 @@
 <div id="divbodyholder">
 <div class="headerholder"><div class="header">
 <div id="title">
-<h1 class="nomargin"><a class="ablack" href="https://gcgallo.github.io/propaganda/index.html">grant's glog</a></h1>
+<h1 class="nomargin"><a class="ablack" href="https://gcgallo.github.io/index.html">grant's glog</a></h1>
 <div id="description">A place to record things</div>
 </div></div></div>
 <div id="divbody"><div class="content">
@@ -28,9 +28,10 @@ as you exit your editor.</p>
 
 <p>Tags: <a href='tag_keep-this-tag-format.html'>keep-this-tag-format</a>, <a href='tag_tags-are-optional.html'>tags-are-optional</a>, <a href='tag_example.html'>example</a></p>
 
+
 <!-- text end -->
 </div>
-<div id="footer">CC by-nc-nd <a href="https://gcgallo.github.io/propaganda">grant</a> &mdash; <a href="mailto:ggallo102&#64;gmail&#46;com">ggallo102&#64;gmail&#46;com</a><br/>
+<div id="footer">CC by-nc-nd <a href="https://gcgallo.github.io">grant</a> &mdash; <a href="mailto:ggallo102&#64;gmail&#46;com">ggallo102&#64;gmail&#46;com</a><br/>
 Generated with <a href="https://github.com/cfenollosa/bashblog">bashblog</a>, a single bash script to easily create blogs like this one</div>
 </div></div>
 </body></html>
