--- a/cool-now-its-in-markdown.html
+++ b/cool-now-its-in-markdown.html
@@ -10,7 +10,7 @@
 <div id="divbodyholder">
 <div class="headerholder"><div class="header">
 <div id="title">
-<h1 class="nomargin"><a class="ablack" href="https://gcgallo.github.io/index.html">grant's glog</a></h1>
+<h1 class="nomargin"><a class="ablack" href="https://gcgallo.github.io/index.html">grant's bash log</a></h1>
 <div id="description">A place to record things</div>
 </div></div></div>
 <div id="divbody"><div class="content">
@@ -32,6 +32,7 @@ here's some code
 maybe</p>
 
 <p>Tags: <a href='tag_bashing-my-head-against-a-wall.html'>bashing-my-head-against-a-wall</a>, <a href='tag_ha.html'>ha</a></p>
+
 
 
 <!-- text end -->
