--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 <link rel="stylesheet" href="main.css" type="text/css" />
 <link rel="stylesheet" href="blog.css" type="text/css" />
 <link rel="alternate" type="application/rss+xml" title="Subscribe to this page..." href="feed.rss" />
-<title>grant's glog</title>
+<title>grant's bash log</title>
 </head><body>
 <div id="divbodyholder">
 <div class="headerholder"><div class="header">
 <div id="title">
-<h1 class="nomargin"><a class="ablack" href="https://gcgallo.github.io/index.html">grant's glog</a></h1>
+<h1 class="nomargin"><a class="ablack" href="https://gcgallo.github.io/index.html">grant's bash log</a></h1>
 <div id="description">A place to record things</div>
 </div></div></div>
 <div id="divbody"><div class="content">
@@ -33,6 +33,7 @@ maybe</p>
 <p>Tags: <a href='tag_bashing-my-head-against-a-wall.html'>bashing-my-head-against-a-wall</a>, <a href='tag_ha.html'>ha</a></p>
 
 
+
 <!-- text end -->
 <h3><a class="ablack" href="this-is-another-post-still-in-html-for-some-reason.html">
 This is another post still in html for some reason?
@@ -49,6 +50,7 @@ Yup, that's it.</p>
 <p>Tags: <a href='tag_what's the pointa tags.html'>what's the pointa tags</a>, <a href='tag_ha.html'>ha</a></p>
 
 
+
 <!-- text end -->
 <h3><a class="ablack" href="why-html-i-wants-markdowns.html">
 Why HTML, i wants markdowns
@@ -63,6 +65,7 @@ John Smith
 as you exit your editor.</p>
 
 <p>Tags: <a href='tag_keep-this-tag-format.html'>keep-this-tag-format</a>, <a href='tag_tags-are-optional.html'>tags-are-optional</a>, <a href='tag_example.html'>example</a></p>
+
 
 
 <!-- text end -->
