--- a/tag_bashing-my-head-against-a-wall.html
+++ b/tag_bashing-my-head-against-a-wall.html
@@ -5,12 +5,12 @@
 <link rel="stylesheet" href="main.css" type="text/css" />
 <link rel="stylesheet" href="blog.css" type="text/css" />
 <link rel="alternate" type="application/rss+xml" title="Subscribe to this page..." href="feed.rss" />
-<title>grant's glog &mdash; Posts tagged "bashing-my-head-against-a-wall"</title>
+<title>grant's bash log &mdash; Posts tagged "bashing-my-head-against-a-wall"</title>
 </head><body>
 <div id="divbodyholder">
 <div class="headerholder"><div class="header">
 <div id="title">
-<h1 class="nomargin"><a class="ablack" href="https://gcgallo.github.io/index.html">grant's glog</a></h1>
+<h1 class="nomargin"><a class="ablack" href="https://gcgallo.github.io/index.html">grant's bash log</a></h1>
 <div id="description">A place to record things</div>
 </div></div></div>
 <div id="divbody"><div class="content">
@@ -31,6 +31,7 @@ here's some code
 maybe</p>
 
 <p>Tags: <a href='tag_bashing-my-head-against-a-wall.html'>bashing-my-head-against-a-wall</a>, <a href='tag_ha.html'>ha</a></p>
+
 
 
 <!-- text end -->
