--- a/tag_pointa.html
+++ b/tag_pointa.html
@@ -5,12 +5,12 @@
 <link rel="stylesheet" href="main.css" type="text/css" />
 <link rel="stylesheet" href="blog.css" type="text/css" />
 <link rel="alternate" type="application/rss+xml" title="Subscribe to this page..." href="feed.rss" />
-<title>grant's glog &mdash; Posts tagged "pointa"</title>
+<title>grant's bash log &mdash; Posts tagged "pointa"</title>
 </head><body>
 <div id="divbodyholder">
 <div class="headerholder"><div class="header">
 <div id="title">
-<h1 class="nomargin"><a class="ablack" href="https://gcgallo.github.io/index.html">grant's glog</a></h1>
+<h1 class="nomargin"><a class="ablack" href="https://gcgallo.github.io/index.html">grant's bash log</a></h1>
 <div id="description">A place to record things</div>
 </div></div></div>
 <div id="divbody"><div class="content">
@@ -27,6 +27,7 @@ John Smith
 Yup, that's it.</p>
 
 <p>Tags: <a href='tag_what's the pointa tags.html'>what's the pointa tags</a>, <a href='tag_ha.html'>ha</a></p>
+
 
 
 <!-- text end -->
