--- a/why-html-i-wants-markdowns.html
+++ b/why-html-i-wants-markdowns.html
@@ -10,7 +10,7 @@
 <div id="divbodyholder">
 <div class="headerholder"><div class="header">
 <div id="title">
-<h1 class="nomargin"><a class="ablack" href="https://gcgallo.github.io/index.html">grant's glog</a></h1>
+<h1 class="nomargin"><a class="ablack" href="https://gcgallo.github.io/index.html">grant's bash log</a></h1>
 <div id="description">A place to record things</div>
 </div></div></div>
 <div id="divbody"><div class="content">
@@ -28,6 +28,7 @@ John Smith
 as you exit your editor.</p>
 
 <p>Tags: <a href='tag_keep-this-tag-format.html'>keep-this-tag-format</a>, <a href='tag_tags-are-optional.html'>tags-are-optional</a>, <a href='tag_example.html'>example</a></p>
+
 
 
 <!-- text end -->
