--- a/all_tags.html
+++ b/all_tags.html
@@ -18,9 +18,11 @@
 <ul>
 <li><a href="tag_bashing-my-head-against-a-wall.html">bashing-my-head-against-a-wall</a> &mdash; 1 post</li>
 <li><a href="tag_example.html">example</a> &mdash; 1 post</li>
+<li><a href="tag_general-update.html">general-update</a> &mdash; 1 post</li>
 <li><a href="tag_ha.html">ha</a> &mdash; 2 posts</li>
 <li><a href="tag_keep-this-tag-format.html">keep-this-tag-format</a> &mdash; 1 post</li>
 <li><a href="tag_pointa.html">pointa</a> &mdash; 1 post</li>
+<li><a href="tag_static-site.html">static-site</a> &mdash; 1 post</li>
 <li><a href="tag_tags-are-optional.html">tags-are-optional</a> &mdash; 1 post</li>
 <li><a href="tag_tags.html">tags</a> &mdash; 1 post</li>
 <li><a href="tag_the.html">the</a> &mdash; 1 post</li>
