--- a/so-the-basic-idea-is-this.html
+++ b/so-the-basic-idea-is-this.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="main.css" type="text/css" />
 <link rel="stylesheet" href="blog.css" type="text/css" />
 <link rel="alternate" type="application/rss+xml" title="Subscribe to this page..." href="feed.rss" />
-<title>grant's bash log</title>
+<title>So the basic idea is this...</title>
 </head><body>
 <div id="divbodyholder">
 <div class="headerholder"><div class="header">
@@ -14,6 +14,7 @@
 <div id="description">A place to record things</div>
 </div></div></div>
 <div id="divbody"><div class="content">
+<!-- entry begin -->
 <h3><a class="ablack" href="so-the-basic-idea-is-this.html">
 So the basic idea is this...
 </a></h3>
@@ -38,62 +39,7 @@ Or I could just use a real static site generator? </p>
 
 <p>Tags: <a href='tag_general-update.html'>general-update</a>, <a href='tag_static-site.html'>static-site</a></p>
 <!-- text end -->
-<h3><a class="ablack" href="cool-now-its-in-markdown.html">
-Cool! Now, it's in markdown
-</a></h3>
-<!-- bashblog_timestamp: #201707110152.39# -->
-<div class="subtitle">July 11, 2017 &mdash; 
-John Smith
-</div>
-<!-- text begin -->
-
-<p>I can work with this. My <strong>Markdown</strong> skills are legit. <br />
-See that was a another line break. But wait...
-<code>
-here's some code
-</code>
-maybe</p>
-
-<p>Tags: <a href='tag_bashing-my-head-against-a-wall.html'>bashing-my-head-against-a-wall</a>, <a href='tag_ha.html'>ha</a></p>
-
-
-
-<!-- text end -->
-<h3><a class="ablack" href="this-is-another-post-still-in-html-for-some-reason.html">
-This is another post still in html for some reason?
-</a></h3>
-<!-- bashblog_timestamp: #201707110144.36# -->
-<div class="subtitle">July 11, 2017 &mdash; 
-John Smith
-</div>
-<!-- text begin -->
-
-<p>Literally the only <b>html</b> i know is </br> you probably can't tell, but that was a line break.
-Yup, that's it.</p>
-
-<p>Tags: <a href='tag_what's the pointa tags.html'>what's the pointa tags</a>, <a href='tag_ha.html'>ha</a></p>
-
-
-
-<!-- text end -->
-<h3><a class="ablack" href="why-html-i-wants-markdowns.html">
-Why HTML, i wants markdowns
-</a></h3>
-<!-- bashblog_timestamp: #201707110138.17# -->
-<div class="subtitle">July 11, 2017 &mdash; 
-John Smith
-</div>
-<!-- text begin -->
-
-<p>The rest of the text file is an <b>html</b> blog post. The process will continue as soon
-as you exit your editor.</p>
-
-<p>Tags: <a href='tag_keep-this-tag-format.html'>keep-this-tag-format</a>, <a href='tag_tags-are-optional.html'>tags-are-optional</a>, <a href='tag_example.html'>example</a></p>
-
-
-
-<!-- text end -->
-<div id="all_posts"><a href="all_posts.html">View more posts</a> &mdash; <a href="all_tags.html">All tags</a> &mdash; <a href="feed.rss">Subscribe</a></div>
+<!-- entry end -->
 </div>
 <div id="footer">CC by-nc-nd <a href="https://gcgallo.github.io">grant</a> &mdash; <a href="mailto:ggallo102&#64;gmail&#46;com">ggallo102&#64;gmail&#46;com</a><br/>
 Generated with <a href="https://github.com/cfenollosa/bashblog">bashblog</a>, a single bash script to easily create blogs like this one</div>
