--- a/all_tags.html
+++ b/all_tags.html
@@ -26,6 +26,7 @@
 <li><a href="tag_tags-are-optional.html">tags-are-optional</a> &mdash; 1 post</li>
 <li><a href="tag_tags.html">tags</a> &mdash; 1 post</li>
 <li><a href="tag_the.html">the</a> &mdash; 1 post</li>
+<li><a href="tag_the-pains-of-lua.html">the-pains-of-lua</a> &mdash; 1 post</li>
 <li><a href="tag_what's.html">what's</a> &mdash; 1 post</li>
 </ul>
 <div id="all_posts"><a href="./index.html">Back to the index page</a></div>
