--- a/all_posts.html
+++ b/all_posts.html
@@ -17,6 +17,7 @@
 <h3>All posts</h3>
 <h4 class='allposts_header'>July 2017</h4>
 <ul>
+<li><a href="./the-pains-of-lua.html">The Pains of Lua</a> &mdash; July 12, 2017</li>
 <li><a href="./so-the-basic-idea-is-this.html">So the basic idea is this...</a> &mdash; July 11, 2017</li>
 <li><a href="./cool-now-its-in-markdown.html">Cool! Now, it's in markdown</a> &mdash; July 11, 2017</li>
 <li><a href="./this-is-another-post-still-in-html-for-some-reason.html">This is another post still in html for some reason?</a> &mdash; July 11, 2017</li>
