--- a/index.html
+++ b/index.html
@@ -14,6 +14,43 @@
 <div id="description">A place to record things</div>
 </div></div></div>
 <div id="divbody"><div class="content">
+<h3><a class="ablack" href="the-pains-of-lua.html">
+The Pains of Lua
+</a></h3>
+<!-- bashblog_timestamp: #201707121356.23# -->
+<div class="subtitle">July 12, 2017 &mdash; 
+grant
+</div>
+<!-- text begin -->
+
+<p>This probably won't be any different. But it is a categorically provable
+fact that 90 percent of programming textbooks, articles, papers, and 
+courses are absolutely terrible. It is also a categorically provable fact 
+that every single one of those textbooks, articles, papers, or videos begins
+with a spiel about how this one is different from the rest.</p>
+
+<p>That's why this attempt at building a guided tour of a programming
+language began with the sentence, "This probably won't be any different",
+because despite all my intentional aversions, I will most likely
+fall into the same punji pits that trap other programming resources.
+But this phrase carries double meaning. At least, for me, every time
+I bear witness to a new programming language, I say to myself.
+"This probably won't be any different." Of course, I later discover,
+that it is quite different from other languages in non-trivial ways,
+but my initial sentiment never changes. No matter how you approach a
+language, you will always carry the baggage of some previous language.
+(This statement was left intentionally general, as it applies to all languages.
+I would think it quite right to say that your first human language has a 
+great deal of impact on how you learn your first programming language
+[citation needed].)</p>
+
+<p>My intial rant was triggered by the idea that textbooks (among other 
+resources) are often curated by individuals who know too much about
+their chosen topic. This typically results in two possible types of
+books. Either one that assumes far too much or not enough.</p>
+
+<p>Tags: <a href='tag_the-pains-of-lua.html'>the-pains-of-lua</a></p>
+<!-- text end -->
 <h3><a class="ablack" href="so-the-basic-idea-is-this.html">
 So the basic idea is this...
 </a></h3>
