--- a/tag_commonplace.html
+++ b/tag_commonplace.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="main.css" type="text/css" />
 <link rel="stylesheet" href="blog.css" type="text/css" />
 <link rel="alternate" type="application/rss+xml" title="Subscribe to this page..." href="feed.rss" />
-<title>grant's bash log &mdash; All tags</title>
+<title>grant's bash log &mdash; Posts tagged "commonplace"</title>
 </head><body>
 <div id="divbodyholder">
 <div class="headerholder"><div class="header">
@@ -14,24 +14,25 @@
 <div id="description">A place to record things</div>
 </div></div></div>
 <div id="divbody"><div class="content">
-<h3>All tags</h3>
+<h3><a class="ablack" href="the-first-80-pages-of-emthe-rebelem.html">
+The first 80 pages of <em>The Rebel</em>
+</a></h3>
+<!-- bashblog_timestamp: #201707150041.41# -->
+<div class="subtitle">July 15, 2017 &mdash; 
+grant
+</div>
+<!-- text begin -->
+
+<p>summary-of/commentary-on/quotes-from Albert Camus' <em>The Rebel</em></p>
+
+<p><strong>Foreword</strong>  </p>
+
 <ul>
-<li><a href="tag_bashing-my-head-against-a-wall.html">bashing-my-head-against-a-wall</a> &mdash; 1 post</li>
-<li><a href="tag_camus-the-rebel.html">camus-the-rebel</a> &mdash; 1 post</li>
-<li><a href="tag_commonplace.html">commonplace</a> &mdash; 1 post</li>
-<li><a href="tag_example.html">example</a> &mdash; 1 post</li>
-<li><a href="tag_general-update.html">general-update</a> &mdash; 1 post</li>
-<li><a href="tag_ha.html">ha</a> &mdash; 2 posts</li>
-<li><a href="tag_keep-this-tag-format.html">keep-this-tag-format</a> &mdash; 1 post</li>
-<li><a href="tag_pointa.html">pointa</a> &mdash; 1 post</li>
-<li><a href="tag_static-site.html">static-site</a> &mdash; 1 post</li>
-<li><a href="tag_tags-are-optional.html">tags-are-optional</a> &mdash; 1 post</li>
-<li><a href="tag_tags.html">tags</a> &mdash; 1 post</li>
-<li><a href="tag_the.html">the</a> &mdash; 1 post</li>
-<li><a href="tag_the-pains-of-lua.html">the-pains-of-lua</a> &mdash; 1 post</li>
-<li><a href="tag_what's.html">what's</a> &mdash; 1 post</li>
+<li><p>"All revolutions in modern times... have led to the reinforcement of the power of the State..."  </p></li>
+<li><p>"The strange and terrifying growth of the modern State can be considered as the logical conclusion of inordinate technical and philosophical ambitions, foreign to the true spirit of rebellion..."</p></li>
 </ul>
-<div id="all_posts"><a href="./index.html">Back to the index page</a></div>
+
+<p class="readmore"><a href="the-first-80-pages-of-emthe-rebelem.html">Read more...</a></p>
 </div>
 <div id="footer">CC by-nc-nd <a href="https://gcgallo.github.io">grant</a> &mdash; <a href="mailto:ggallo102&#64;gmail&#46;com">ggallo102&#64;gmail&#46;com</a><br/>
 Generated with <a href="https://github.com/cfenollosa/bashblog">bashblog</a>, a single bash script to easily create blogs like this one</div>
