--- a/tag_the-pains-of-lua.html
+++ b/tag_the-pains-of-lua.html
@@ -29,28 +29,7 @@ courses are absolutely terrible. It is also a categorically provable fact
 that every single one of those textbooks, articles, papers, or videos begins
 with a spiel about how this one is different from the rest.</p>
 
-<p>That's why this attempt at building a guided tour of a programming
-language began with the sentence, "This probably won't be any different",
-because despite all my intentional aversions, I will most likely
-fall into the same punji pits that trap other programming resources.
-But this phrase carries double meaning. At least, for me, every time
-I bear witness to a new programming language, I say to myself.
-"This probably won't be any different." Of course, I later discover,
-that it is quite different from other languages in non-trivial ways,
-but my initial sentiment never changes. No matter how you approach a
-language, you will always carry the baggage of some previous language.
-(This statement was left intentionally general, as it applies to all languages.
-I would think it quite right to say that your first human language has a 
-great deal of impact on how you learn your first programming language
-[citation needed].)</p>
-
-<p>My intial rant was triggered by the idea that textbooks (among other 
-resources) are often curated by individuals who know too much about
-their chosen topic. This typically results in two possible types of
-books. Either one that assumes far too much or not enough.</p>
-
-<p>Tags: <a href='tag_the-pains-of-lua.html'>the-pains-of-lua</a></p>
-<!-- text end -->
+<p class="readmore"><a href="the-pains-of-lua.html">Read more...</a></p>
 </div>
 <div id="footer">CC by-nc-nd <a href="https://gcgallo.github.io">grant</a> &mdash; <a href="mailto:ggallo102&#64;gmail&#46;com">ggallo102&#64;gmail&#46;com</a><br/>
 Generated with <a href="https://github.com/cfenollosa/bashblog">bashblog</a>, a single bash script to easily create blogs like this one</div>
